--- a/app/assets/sass/_modules/_booking.scss
+++ b/app/assets/sass/_modules/_booking.scss
@@ -1,7 +1,9 @@
 .date-picker {
   @include size(65rem 10rem);
   margin: 14rem auto 0;
-  box-shadow: 0px 5px 50px rgba(0,0,0,0.25);
+  @include media($desktop) {
+    box-shadow: 0px 5px 50px rgba(0,0,0,0.25);
+  }
 
   .checkin, .checkout, .guests {
     @include size(14.4rem 10rem);
@@ -113,6 +115,7 @@
       float: none;
       margin-left: 22%;
       width: 29rem;
+      box-shadow: 0px 5px 50px rgba(0,0,0,0.25);
     }
   }
 
