--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1154,11 +1154,52 @@ footer div ul li a img {
   max-width: 100vw;
   min-height: 100vh;
 }
+@media screen and (max-width: 480px) {
+  .landing .img-wrap img {
+    width: auto !important;
+    max-width: none !important;
+    min-height: 100vh;
+  }
+}
 .landing .img-wrap .slick-dots {
   display: block;
   position: absolute;
-  top: 10rem;
+  top: 20rem;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 9999;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.landing .img-wrap .slick-dots li {
+  display: block;
+  float: left;
+  margin-right: 1rem;
+}
+.landing .img-wrap .slick-dots li:last-child {
+  margin-right: 0;
+}
+.landing .img-wrap .slick-dots li.slick-active button {
+  background: white !important;
+}
+.landing .img-wrap .slick-dots button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  height: 1.1rem;
+  width: 1.1rem;
+  border-radius: 100%;
+  border: 1px solid white;
+  text-indent: -99999px;
+  background: transparent;
+  padding: 0;
+  outline: none;
+}
+.landing .img-wrap .slick-dots button:hover {
+  background: white;
 }
 .landing .wrapper {
   position: absolute;
@@ -1288,7 +1329,11 @@ footer div ul li a img {
   height: 10rem;
   width: 65rem;
   margin: 14rem auto 0;
-  box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.25);
+}
+@media screen and (min-width: 480px) {
+  .date-picker {
+    box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.25);
+  }
 }
 .date-picker .checkin, .date-picker .checkout, .date-picker .guests {
   height: 10rem;
@@ -1409,6 +1454,7 @@ footer div ul li a img {
     float: none;
     margin-left: 22%;
     width: 29rem;
+    box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.25);
   }
 }
 @media screen and (max-width: 480px) {
@@ -2233,7 +2279,7 @@ footer div ul li a img {
 }
 @media screen and (max-width: 480px) {
   #content.villas.feed .landing {
-    top: 15.7rem;
+    top: 11.1rem;
   }
 }
 #content.villas.feed .landing .half {
