--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2458,6 +2458,11 @@ footer div ul li a img {
   list-style: none;
   margin: 5rem 0;
 }
+@media screen and (max-width: 480px) {
+  #content.villas.feed article.room .infos ul.slider-nav {
+    margin: 2rem 0;
+  }
+}
 #content.villas.feed article.room .infos ul.slider-nav li {
   margin-right: 0.5rem;
 }
