--- a/app/assets/sass/_pages/_about.scss
+++ b/app/assets/sass/_pages/_about.scss
@@ -42,7 +42,7 @@
         }
 
       }
-      .images {
+      .image {
         @include media($desktop) {
           @include span-columns(7);
         }
