--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1977,24 +1977,24 @@ footer div ul li a img {
   }
 }
 @media screen and (min-width: 480px) {
-  #content.about section.history .container .images {
+  #content.about section.history .container .image {
     float: left;
     display: block;
     margin-right: 2.3576515979%;
     width: 57.3509785009%;
   }
-  #content.about section.history .container .images:last-child {
+  #content.about section.history .container .image:last-child {
     margin-right: 0;
   }
 }
 @media screen and (max-width: 480px) {
-  #content.about section.history .container .images {
+  #content.about section.history .container .image {
     float: left;
     display: block;
     margin-right: 2.3576515979%;
     width: 100%;
   }
-  #content.about section.history .container .images:last-child {
+  #content.about section.history .container .image:last-child {
     margin-right: 0;
   }
 }
@@ -2455,6 +2455,7 @@ footer div ul li a img {
   left: 0;
 }
 #content.villas.feed article.room .infos ul.slider-nav {
+  cursor: pointer;
   list-style: none;
   margin: 5rem 0;
 }
