fix slider home

--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -4,14 +4,16 @@
   z-index: 5;
   overflow: hidden;
   > img {
-    @include size(auto);
-    object-fit: cover;
-    position: $position;
-    left: 0;
-    z-index: 5;
-
     max-width: none;
-    max-height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+
+    // object-fit: cover;
+
+    // position: $position;
+    // left: 0;
+    // z-index: 5;
+
   }
   // home slider :
 
@@ -31,7 +33,7 @@
     .slick-dots {
       display: block;
       position: absolute;
-      top: 20rem; left: 50%;
+      top: 16rem; left: 50%;
       @include transform(translateX(-50%));
       z-index: 9999;
       list-style-type: none;
