--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1136,14 +1136,9 @@ footer div ul li a img {
   overflow: hidden;
 }
 .landing > img {
-  height: auto;
-  width: auto;
-  object-fit: cover;
-  position: absolute;
-  left: 0;
-  z-index: 5;
   max-width: none;
-  max-height: 100vh;
+  min-height: 100vh;
+  width: 100vw;
 }
 .landing .img-wrap {
   max-height: 100vh;
@@ -1164,7 +1159,7 @@ footer div ul li a img {
 .landing .img-wrap .slick-dots {
   display: block;
   position: absolute;
-  top: 20rem;
+  top: 16rem;
   left: 50%;
   transform: translateX(-50%);
   z-index: 9999;
