--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -28,10 +28,6 @@ header {
       li {
         display: inline-block;
         margin-right: 4rem;
-        // @include media($mobile) {
-        //   width: 38%;
-        //   padding-top: 1.5rem;
-        // }
         a {
           display: block;
 
@@ -44,6 +40,7 @@ header {
   }
   &.white {
     position: fixed;
+    top: -11.1rem;
     z-index: 9999;
     padding: 3rem 0;
     background-color: white;
@@ -53,6 +50,7 @@ header {
   }
   &.hide-desktop {
     position: fixed;
+    top:0;
     z-index: 9999;
     background-color: white;
     box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
