--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -989,6 +989,7 @@ header nav ul li a {
 }
 header.white {
   position: fixed;
+  top: -11.1rem;
   z-index: 9999;
   padding: 3rem 0;
   background-color: white;
@@ -1002,6 +1003,7 @@ header.white nav a {
 }
 header.hide-desktop {
   position: fixed;
+  top: 0;
   z-index: 9999;
   background-color: white;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
