--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -3,27 +3,70 @@
   position: relative;
   z-index: 5;
   overflow: hidden;
-  > img {
-    max-width: none;
-    min-height: 100vh;
-    width: 100vw;
-
-    // object-fit: cover;
-
-    // position: $position;
-    // left: 0;
-    // z-index: 5;
-
+  // > img {
+  //   max-width: none;
+  //   min-height: 100vh;
+  //   width: 100vw;
+  // }
+  body.about & {
+    background: white url('../images/landing/about-landing.jpg') no-repeat center center fixed;
+    background-size: cover;
+    @media (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
+      background: white url('../images/landing/about-landing@2x.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
   }
-  // home slider :
+  body.villas & {
+    background: white url('../images/landing/villas-landing-desktop.jpg') no-repeat center center fixed;
+    background-size: cover;
+    @media (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
+      background: white url('../images/landing/villas-landing-desktop@2x.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+    @include media($mobile) {
+      background: white url('../images/landing/villas-landing-mobile.jpg') no-repeat center center fixed;
+    }
+  }
+  body.services & {
+    background: white url('../images/landing/services-landing.jpg') no-repeat center center fixed;
+    background-size: cover;
+    @media (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
+      background: white url('../images/landing/services-landing@2x.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+  }
+  body.special-offers & {
+    background: white url('../images/landing/special-offers-landing.jpg') no-repeat center center fixed;
+    background-size: cover;
+    @media (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
+      background: white url('../images/landing/special-offers-landing@2x.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+  }
+  body.news & {
+    background: white url('../images/landing/news-landing.jpg') no-repeat center center fixed;
+    background-size: cover;
+    @media (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
+      background: white url('../images/landing/news-landing@2x.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+  }
 
+
+  // home slider :
   .img-wrap {
     max-height: 100vh;
     overflow: hidden;
     z-index: -1;
     img {
+      // width: auto;
       min-width: 0 !important;
-      max-width: 100vw;
+      // max-width: 200% !important;
       min-height: 100vh;
       @include media($mobile) {
         width: auto !important;
