--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1137,10 +1137,60 @@ footer div ul li a img {
   z-index: 5;
   overflow: hidden;
 }
-.landing > img {
-  max-width: none;
-  min-height: 100vh;
-  width: 100vw;
+body.about .landing {
+  background: white url("../images/landing/about-landing.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  body.about .landing {
+    background: white url("../images/landing/about-landing@2x.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
+}
+body.villas .landing {
+  background: white url("../images/landing/villas-landing-desktop.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  body.villas .landing {
+    background: white url("../images/landing/villas-landing-desktop@2x.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
+}
+@media screen and (max-width: 480px) {
+  body.villas .landing {
+    background: white url("../images/landing/villas-landing-mobile.jpg") no-repeat center center fixed;
+  }
+}
+body.services .landing {
+  background: white url("../images/landing/services-landing.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  body.services .landing {
+    background: white url("../images/landing/services-landing@2x.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
+}
+body.special-offers .landing {
+  background: white url("../images/landing/special-offers-landing.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  body.special-offers .landing {
+    background: white url("../images/landing/special-offers-landing@2x.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
+}
+body.news .landing {
+  background: white url("../images/landing/news-landing.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  body.news .landing {
+    background: white url("../images/landing/news-landing@2x.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
 }
 .landing .img-wrap {
   max-height: 100vh;
@@ -1149,7 +1199,6 @@ footer div ul li a img {
 }
 .landing .img-wrap img {
   min-width: 0 !important;
-  max-width: 100vw;
   min-height: 100vh;
 }
 @media screen and (max-width: 480px) {
