--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1192,62 +1192,6 @@ body.news .landing {
     background-size: cover;
   }
 }
-.landing .img-wrap {
-  max-height: 100vh;
-  overflow: hidden;
-  z-index: -1;
-}
-.landing .img-wrap img {
-  min-width: 0 !important;
-  min-height: 100vh;
-}
-@media screen and (max-width: 480px) {
-  .landing .img-wrap img {
-    width: auto !important;
-    max-width: none !important;
-    min-height: 100vh;
-  }
-}
-.landing .img-wrap .slick-dots {
-  display: block;
-  position: absolute;
-  top: 16rem;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 95;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-.landing .img-wrap .slick-dots li {
-  display: block;
-  float: left;
-  margin-right: 1rem;
-}
-.landing .img-wrap .slick-dots li:last-child {
-  margin-right: 0;
-}
-.landing .img-wrap .slick-dots li.slick-active button {
-  background: white !important;
-}
-.landing .img-wrap .slick-dots button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-  height: 1.1rem;
-  width: 1.1rem;
-  border-radius: 100%;
-  border: 1px solid white;
-  text-indent: -99999px;
-  background: transparent;
-  padding: 0;
-  outline: none;
-}
-.landing .img-wrap .slick-dots button:hover {
-  background: white;
-}
 .landing .wrapper {
   position: absolute;
   z-index: 9;
@@ -1724,6 +1668,42 @@ body.news .landing {
     margin-right: 0;
   }
 }
+#content.home .landing .img-wrap {
+  max-height: 100vh;
+  overflow: hidden;
+  z-index: -1;
+}
+#content.home .landing .img-wrap img {
+  min-width: 0 !important;
+  min-height: 100vh;
+}
+@media screen and (max-width: 480px) {
+  #content.home .landing .img-wrap img {
+    width: auto !important;
+    max-width: none !important;
+    min-height: 100vh;
+  }
+}
+#content.home .landing .img-wrap .arrow {
+  height: 2.1rem;
+  width: 1rem;
+  display: block;
+  position: absolute;
+  z-index: 99;
+  top: 20rem;
+  cursor: pointer;
+  border-radius: 100%;
+}
+#content.home .landing .img-wrap .arrow.arrow-left {
+  background: url("../images/asset-caret-left.svg") no-repeat center center;
+  background-size: 1rem;
+  left: 48%;
+}
+#content.home .landing .img-wrap .arrow.arrow-right {
+  background: url("../images/asset-caret-right.svg") no-repeat center center;
+  background-size: 1rem;
+  right: 48%;
+}
 #content.home .main {
   padding-top: 15rem;
 }
@@ -1742,10 +1722,10 @@ body.news .landing {
   margin-top: 0;
 }
 #content.home .main section.intro p {
-  font-size: 14px;
-  line-height: 19px;
-  font-size: 1.4rem;
-  line-height: 1.9rem;
+  font-size: 16px;
+  line-height: 20px;
+  font-size: 1.6rem;
+  line-height: 2rem;
 }
 #content.home .main section.types-of-room {
   padding-bottom: 15rem;
