--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -33,12 +33,12 @@
       background-size: cover;
     }
   }
-  body.special-offers & {
-    background: white url('../images/landing/special-offers-landing.jpg') no-repeat center center fixed;
+  body.special-occasions & {
+    background: white url('../images/landing/special-occasions-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi) {
-      background: white url('../images/landing/special-offers-landing@2x.jpg') no-repeat center center fixed;
+      background: white url('../images/landing/special-occasions-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
   }
