--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1172,13 +1172,13 @@ body.services .landing {
     background-size: cover;
   }
 }
-body.special-offers .landing {
-  background: white url("../images/landing/special-offers-landing.jpg") no-repeat center center fixed;
+body.special-occasions .landing {
+  background: white url("../images/landing/special-occasions-landing.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  body.special-offers .landing {
-    background: white url("../images/landing/special-offers-landing@2x.jpg") no-repeat center center fixed;
+  body.special-occasions .landing {
+    background: white url("../images/landing/special-occasions-landing@2x.jpg") no-repeat center center fixed;
     background-size: cover;
   }
 }
