--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2600,8 +2600,8 @@ article.press::after {
   content: "";
   display: table;
 }
-article.press:first-child {
-  padding-top: 0;
+article.press:first-of-type {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 @media screen and (min-width: 480px) {
   article.press .image {
