page contact html/css

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -27,4 +27,5 @@
  @import "_pages/special-offers";
  @import "_pages/villas";
  @import "_pages/news";
+ @import "_pages/contact";
  @import "_pages/social-feed";
