--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -994,7 +994,7 @@ header.white {
   z-index: 9999;
   padding: 3rem 0;
   background-color: white;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
 }
 header.white a.logo {
   color: #293443;
@@ -2714,6 +2714,52 @@ article.press .date {
   color: #293443;
   font-weight: 200;
   font-style: italic;
+}
+
+#content.contact {
+  min-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
+}
+#content.contact::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+#content.contact .four {
+  margin-left: 20rem;
+  display: inline-block;
+  margin-top: 12rem;
+  background: white;
+  float: none;
+  overflow: auto;
+  font-size: 1.4rem;
+}
+#content.contact .four h3 {
+  font-size: 4.5rem;
+}
+#content.contact .four > p:first-of-type {
+  margin-top: 5rem;
+}
+#content.contact .contact-info {
+  color: #293442;
+  margin: 5rem 0;
+}
+#content.contact .btn {
+  display: block;
+  margin: .5rem 0;
+}
+#content.contact .phone {
+  margin-top: 5rem;
+}
+#content.contact img {
+  display: block;
+  float: right;
+  margin-top: 7rem;
+  right: 0;
+  min-width: 0;
+  z-index: -1;
+  min-height: calc(100vh - 7rem);
 }
 
 .social-feed .instagram-elt {
