--- a/app/assets/sass/_pages/_social-feed.scss
+++ b/app/assets/sass/_pages/_social-feed.scss
@@ -25,14 +25,17 @@
 
 		&.image {
 			z-index: 3;
+			overflow: hidden;
 
 			.instagram-image {
 				display: block;
 				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
+				top: -30%;
+				left: -30%;
+				min-width: 1px;
+				max-width: 200%;
+				width: 160%;
+				height: auto;
 				z-index: 2;
 			}
 
