--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2789,14 +2789,17 @@ article.press .date {
 }
 .social-feed .instagram-elt.image {
   z-index: 3;
+  overflow: hidden;
 }
 .social-feed .instagram-elt.image .instagram-image {
   display: block;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -30%;
+  left: -30%;
+  min-width: 1px;
+  max-width: 200%;
+  width: 160%;
+  height: auto;
   z-index: 2;
 }
 .social-feed .instagram-elt.image .go-to-instagram {
