--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -14,6 +14,8 @@
  @import "_base/grid";
  @import "_base/type";
 
+ @import "_addons/custom-dropdown";
+
  @import "_modules/general";
  @import "_modules/loading";
  @import "_modules/header-footer";
