--- a/app/assets/sass/_modules/_booking.scss
+++ b/app/assets/sass/_modules/_booking.scss
@@ -1,6 +1,6 @@
 .date-picker {
   @include size(65rem 10rem);
-  margin: 14rem auto 0;
+  margin: 12rem auto 0;
   @include media($desktop) {
     box-shadow: 0px 5px 50px rgba(0,0,0,0.25);
   }
@@ -70,28 +70,28 @@
     &:after {right: 2rem;}
   }
   .guests {
-    select {
-      @include size(46% 100%);
-      @include appearance(none);
-      border:none;
-      outline:none;
-      border-radius: 0;
-      background: transparent;
-
-      color: $dark;
-      font-family: $title-font;
-      padding-left: 8rem;
-      font-size: 4.8rem;
-      option:not(:checked) {
-        font-size: 1.2rem;
-      }
-      &:focus {
-        outline:none;
-      }
-
-      option[selected=selected] {
-      }
-    }
+    // select {
+    //   @include size(46% 100%);
+    //   @include appearance(none);
+    //   border:none;
+    //   outline:none;
+    //   border-radius: 0;
+    //   background: transparent;
+    //
+    //   color: $dark;
+    //   font-family: $title-font;
+    //   padding-left: 8rem;
+    //   font-size: 4.8rem;
+    //   option:not(:checked) {
+    //     font-size: 1.2rem;
+    //   }
+    //   &:focus {
+    //     outline:none;
+    //   }
+    //
+    //   option[selected=selected] {
+    //   }
+    // }
     &:before {content: "Guests";}
     &:after {right: 4.5rem;}
   }
@@ -146,7 +146,7 @@
   visibility: hidden; opacity: 0;
   @include transition(all 0.35s ease);
   &.open {
-    margin-top: -11.5rem;
+    margin-top: -13.5rem;
     opacity: 1;
     visibility: visible;
   }
